<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TinyChat</string>
    <string name="action_map">地图</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">imageDescription</string>
    <string name="message">消息</string>
    <string name="friend">好友</string>
    <string name="setting">设置</string>
	<string name="btn_return">返    回</string>
	<string name="btn_next">下一步</string>
	<string name="dialog_tips">提 示</string>
	<string name="btn_finish">保    存</string>
	<string name="btn_send_message">发送消息</string>
	<string name="btn_position">位置信息</string>
	<string name="welcome_btn_login">登 陆</string>
	<string name="login_hint_nickname">输入您的昵称</string>
	<string name="login_text_onlinestate">在线</string>
	<string name="login_text_birthday">出生日期</string>
	<string name="login_text_age">岁</string>
	<string name="login_text_birthdaytips">提醒：您的出生日期不会出现在个人资料中。</string>
	<string name="login_text_selectsex">选择性别</string>
	<string name="login_text_male">男</string>
	<string name="login_text_female">女</string>
	<string name="login_text_lastlogin">上次登录: </string>
	<string name="login_text_changeuser">更  换  账  户</string>
	
	<string name="wifiap_btn_connectwifi">点击连接</string>
	<string name="wifiap_btn_disconnect">点击断开</string>
	<string name="wifiap_text_searchap_empty">未搜索到可用热点，可尝试重新搜索</string>
	<string name="wifiap_text_searchap_searching">正在搜索附近的热点</string>
	<string name="wifiap_text_createap_fail">热点创建失败，请尝试重新创建</string>
	<string name="wifiap_dialog_createap_nonsupport">您的设备不支持热点创建</string>
	<string name="wifiap_text_createap_creating">正在创建热点</string>
	<string name="wifiap_dialog_createap_closewifi_confirm">创建热点会关闭当前的WiFi，确认继续？</string>
	<string name="wifiap_dialog_createap_used">系统热点被占用，点确定开启热点以传输文件。</string>
	<string name="wifiap_dialog_searchap_closeap_confirm">是否关闭当前热点去搜索其他热点？</string>
	<string name="wifiap_dialog_closeap_confirm">您确定需要关闭热点？</string>
	<string name="wifiap_text_connectap_succeed">热点创建成功！</string>
	<string name="wifiap_text_connectap_ssid">\n热点名：</string>
	
	<string name="setting_text_myprofile">我的资料</string>
	<string name="setting_text_sysconfig">系统设置</string>
	<string name="setting_text_serverconfig">服务器设置</string>
	<string name="setting_text_startserver">启动服务器</string>
	<string name="setting_text_stopserver">停止服务器</string>
	<string name="setting_text_login">登录</string>
	<string name="setting_text_logout">注销</string>
	<string name="setting_text_sysconfig_sound">声音提醒</string>
	<string name="setting_text_sysconfig_vibra">震动提醒</string>
	<string name="setting_btn_cleandb">删除聊天记录</string>
	<string name="setting_btn_aboutus">关 于 我 们</string>
	<string name="setting_btn_closeapp">退 出</string>
	
	<string name="aboutus_copyright">Copyright © 2014 Chat By tiny</string>
	<string name="aboutus_text">\u0020\u0020 关于</string>
	<string name="aboutus_text2">嘻嘻，你进来作甚？！</string>
	
	<string name="maintab_text_message">消息</string>
	<string name="maintab_text_nearby">附近</string>
	<string name="maintab_text_setting">设置</string>
	
	<string name="emotionbar_text_default">默认</string>
	<string name="maintab_text_emoji">Emoji</string>
	
	<string name="no_file">No files</string>
	<string name="enable_sd_card">SD card is not available, please connect one</string>
	<string name="current_path_label">当前路径: </string>
	<string name="select_file_for_send">选择要发送的文件</string>
	<string name="select_path_for_save">选择接收文件的文件夹</string>
	<string name="accept">接收</string>
	<string name="close">关闭</string>

</resources>