<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
       
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#F5F5F5"
        android:gravity="center_vertical"
        >

        <LinearLayout
     
            android:id="@+id/linear_message"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal"
        >
          <TextView
            android:id="@+id/tv_message"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            />
          <TextView
            android:id="@+id/tv_message_count"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            />
        </LinearLayout>
      

        <TextView
            android:id="@+id/tv_friend"
           android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/friend" />

       
        <TextView
            android:id="@+id/tv_setting"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/setting" />

       
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F5F5F5"
        android:weightSum="3" >

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@drawable/lib_button_line"
            android:scaleType="matrix"
            android:contentDescription="@string/image_description" />
    </LinearLayout>

   

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
         >

        <android.support.v4.view.ViewPager
            android:id="@+id/vPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />

     <!--    <include layout="@layout/loadinglistentry" />--> 
    </RelativeLayout>

</LinearLayout>