<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
   android:background="@color/background_normal"
    android:orientation="vertical" >

    <include
        android:id="@+id/aboutus_header"
        layout="@layout/include_header" />

    <LinearLayout
        android:id="@+id/about_us_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutus_header"
        
        android:orientation="vertical" >

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_below="@id/about_us_body"
        android:gravity="center"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/app_logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/aboutus_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/aboutus_text2" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutus_copyright"
        android:textColor="@color/text_color"
        android:textSize="10sp" />

</RelativeLayout>