<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_linearlayout_main"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="15dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/setting_my_avater_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/corners_avatar"
                    android:maxHeight="90dp"
                    android:maxWidth="90dp"
                    android:padding="5dp"
                    android:src="@drawable/avatar12" />
            </LinearLayout>

            <EditText
                android:id="@+id/setting_my_nickname"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dip"
                android:layout_weight="2"
                android:background="@drawable/edittext_default"
                android:hint="@string/login_hint_nickname"
                android:maxLength="8"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10dip"
            android:background="@color/devideline" />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
           <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="设备ID:" />
            <TextView
                android:id="@+id/tv_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="0" />
         </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="注册类型:" />

            <CheckBox
                android:id="@+id/ck_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TEXT" />

            <CheckBox
                android:id="@+id/ck_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="FILE" />

            <CheckBox
                android:id="@+id/ck_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="VOICE" />

            <CheckBox
                android:id="@+id/ck_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="VIDEO" />

            <CheckBox
                android:id="@+id/ck_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="SENSOR" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="网络状态:" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_public_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="公网" />

                <RadioButton
                    android:id="@+id/rb_private_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="专网" />
            </RadioGroup>
 
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_unlogin_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp" >

        <Button
            android:id="@+id/setting_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="42dip"
            android:layout_marginRight="9dip"
            android:layout_weight="1"
            android:background="@drawable/btn_bottombar"
            android:gravity="center"
            android:text="@string/btn_return"
            android:textColor="@color/profile_bottom_text_color"
            android:textSize="14sp" />
 
        <Button
            android:id="@+id/setting_btn_send_message"
            android:layout_width="wrap_content"
            android:layout_height="42dip"
            android:layout_marginLeft="9dip"
            android:layout_weight="1"
            android:background="@drawable/btn_bottombar"
            android:gravity="center"
            android:text="@string/btn_send_message"
            android:textColor="@color/profile_bottom_text_color"
            android:textSize="14sp" />
        <Button
            android:id="@+id/setting_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="42dip"
            android:layout_marginLeft="9dip"
            android:layout_weight="1"
            android:background="@drawable/btn_bottombar"
            android:gravity="center"
            android:text="@string/btn_finish"
            android:textColor="@color/profile_bottom_text_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>